--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ funct/__pycache__/get_ip.cpython-312.pyc
 funct/__pycache__/json_read.cpython-312.pyc
 funct/__pycache__/log_insert.cpython-312.pyc
 funct/__pycache__/skeleton.cpython-312.pyc
+funct/__pycache__/dns_daddy.cpython-311.pyc
+funct/__pycache__/dns_email.cpython-311.pyc
+funct/__pycache__/get_ip.cpython-311.pyc
+funct/__pycache__/json_read.cpython-311.pyc
+funct/__pycache__/log_insert.cpython-311.pyc
+funct/__pycache__/skeleton.cpython-311.pyc
